CU-86a0jg58y - Setup e2e tests for the \"examples\" folder of WcSdk

--- a/examples/wc-dapp-vite-vanilla/index.html
+++ b/examples/wc-dapp-vite-vanilla/index.html
@@ -21,7 +21,7 @@
         <button id="traverseIterator">traverse Iterator</button>
         <button id="getWalletInfo">get Wallet Info</button>
       </div>
-      <button id="connect">Connect Wallet</div>
+      <button data-testid="app__wallet-connect" id="connect">Connect Wallet</div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
